// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadList component renders DownloadListButton properly without context 1`] = `
<button
  class="MuiButtonBase-root MuiButton-root buttonStyles-root-65 MuiButton-contained buttonStyles-contained-67 MuiButton-containedPrimary"
  tabindex="0"
  type="button"
>
  <span
    class="MuiButton-label buttonStyles-label-68"
  >
    label
  </span>
  <span
    class="MuiTouchRipple-root"
  />
</button>
`;

exports[`DownloadList component renders DownloadListCheckbox properly without context 1`] = `
<span
  class=""
>
  <div
    class="MuiFormControl-root Checkbox"
  >
    <label
      class="MuiFormControlLabel-root"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-61 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
        data-testid="testID"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            aria-label="first checkbox"
            class="PrivateSwitchBase-input-64"
            data-indeterminate="false"
            name="id-1"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      />
    </label>
  </div>
</span>
`;

exports[`DownloadList component renders DownloadListClear properly without context 1`] = `
<a
  class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
  type="button"
>
  <span>
    Label
  </span>
</a>
`;

exports[`DownloadList component renders correctly 1`] = `
<span
  class=""
>
  <div
    class="MuiFormControl-root Checkbox"
  >
    <label
      class="MuiFormControlLabel-root"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-1 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            aria-label="first checkbox"
            class="PrivateSwitchBase-input-4"
            data-indeterminate="false"
            name="id-1"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      />
    </label>
  </div>
</span>
`;
